Update signup tagline to use default value instead of tenant value

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -293,7 +293,7 @@
   },
   "tenantSignup": {
     "getStarted": "Get started",
-    "defaultTagline": "Create beautiful web apps with just a prompt",
+    "defaultTagline": "Create beautiful apps and websites with just a prompt",
     "step": "Step {{step}} of {{total}}",
     "email": "Email",
     "emailPlaceholder": "Enter your email",
