Add AppPreviewModal and integrate community showcase updates

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -39,6 +39,12 @@
       "satisfaction": "User Satisfaction"
     }
   },
+  "community": {
+    "preview": {
+      "remix": "Remix",
+      "close": "Close"
+    }
+  },
   "features": {
     "title": "Everything you need to build amazing apps and websites",
     "subtitle": "Kliv provides a complete development environment powered by AI, making app creation accessible to everyone.",
