--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -39,6 +39,12 @@
       "satisfaction": "ユーザー満足度"
     }
   },
+  "community": {
+    "preview": {
+      "remix": "リミックス",
+      "close": "閉じる"
+    }
+  },
   "features": {
     "title": "素晴らしいアプリとウェブサイトを構築するために必要なすべて",
     "subtitle": "KlivはAIによって駆動される完全な開発環境を提供し、誰でもアプリ作成にアクセスできるようにします。",
