--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -39,6 +39,12 @@
       "satisfaction": "Användarnöjdhet"
     }
   },
+  "community": {
+    "preview": {
+      "remix": "Remixa",
+      "close": "Stäng"
+    }
+  },
   "features": {
     "title": "Allt du behöver för att bygga fantastiska appar och webbsidor",
     "subtitle": "Kliv tillhandahåller en komplett utvecklingsmiljö driven av AI, vilket gör appskapande tillgängligt för alla.",
