Update preview button text to 'Use as Template' in multiple locales

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -41,7 +41,7 @@
   },
   "community": {
     "preview": {
-      "remix": "Remix",
+      "useAsTemplate": "Use as Template",
       "close": "Close"
     }
   },
