--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -41,7 +41,7 @@
   },
   "community": {
     "preview": {
-      "remix": "リミックス",
+      "useAsTemplate": "テンプレートとして使用",
       "close": "閉じる"
     }
   },
