--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -41,7 +41,7 @@
   },
   "community": {
     "preview": {
-      "remix": "Remixa",
+      "useAsTemplate": "Använd som mall",
       "close": "Stäng"
     }
   },
