Integrate i18n for community showcase and improve dark mode styles

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -40,6 +40,8 @@
     }
   },
   "community": {
+    "title": "From the Community",
+    "viewAll": "View All",
     "preview": {
       "useAsTemplate": "Use as Template",
       "close": "Close"
