--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -40,6 +40,8 @@
     }
   },
   "community": {
+    "title": "コミュニティから",
+    "viewAll": "すべて表示",
     "preview": {
       "useAsTemplate": "テンプレートとして使用",
       "close": "閉じる"
