--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -40,6 +40,8 @@
     }
   },
   "community": {
+    "title": "Från communityn",
+    "viewAll": "Visa alla",
     "preview": {
       "useAsTemplate": "Använd som mall",
       "close": "Stäng"
