--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -2,377 +2,118 @@
   "nav": {
     "features": "機能",
     "pricing": "料金",
-    "docs": "ドキュメント",
-    "blog": "ブログ",
-    "signIn": "サインイン",
-    "getStarted": "始める"
+    "about": "会社概要",
+    "careers": "採用情報",
+    "login": "ログイン",
+    "signup": "サインアップ"
   },
   "hero": {
-    "title": "AIとチャットしてアプリとウェブサイトを構築",
-    "subtitle": "あなたのアイデアを説明すると、Klivが数分で完全に機能するアプリケーションやウェブサイトを作成します。コーディングは不要です。",
-    "placeholder": "構築したいアプリやウェブサイトを説明してください...",
-    "typingExamples": [
-      "安全な決済機能を備えた素晴らしいECサイト",
-      "リアルタイム分析のためのインタラクティブなダッシュボード",
-      "豊富なコンテンツとコメント機能を備えたダイナミックなブログ",
-      "進捗チャート付きのパーソナライズされたフィットネストラッカー",
-      "あなたの作品を紹介する洗練されたポートフォリオサイト",
-      "あらゆるサービスに対応する堅牢な予約システム"
-    ],
-    "examples": {
-      "label": "これらの例を試してください：",
-      "todo": "カテゴリ付きのToDoアプリ",
-      "dashboard": "チャート付きの売上ダッシュボード",
-      "blog": "コメント機能付きの個人ブログ",
-      "todoFull": "ドラッグアンドドロップ機能、仕事、個人、ショッピングなどの色分けされたカテゴリ、スムーズなアニメーションを備えた美しいToDoアプリケーションを作成します。優先度レベル、期限、進捗を表示するクリーンなダッシュボードなどの機能を含めます。デスクトップとモバイルデバイスの両方で完璧に動作するレスポンシブデザインにします。",
-      "dashboardFull": "収益トレンド、トップパフォーマンス製品、顧客インサイトを表示するインタラクティブなチャートを備えた素晴らしい売上分析ダッシュボードを構築します。リアルタイムで更新される棒グラフ、線グラフ、円グラフを含む美しいデータ視覚化を含めます。異なる期間のフィルターとレポートのエクスポート機能を追加します。",
-      "blogFull": "リッチテキスト編集、画像ギャラリー、ソーシャル共有ボタンを備えたクリーンで雑誌スタイルのレイアウトを持つモダンな個人ブログをデザインします。読者があなたの投稿に関わることができるコメントシステム、タグベースのナビゲーション、検索機能を含めます。美しいタイポグラフィと高速読み込み時間でSEOフレンドリーにします。"
-    },
-    "cta": "構築を開始",
-    "watchDemo": "デモを見る",
-    "badge": "AI駆動の開発",
-    "inputLabel": "アプリやウェブサイトのアイデアを説明してください",
+    "badge": "AI駆動のアプリ開発",
+    "title": "AIでWebアプリを構築",
+    "subtitle": "アイデアを説明するだけで、AIが完全に機能するWebアプリケーションを作成します。コーディング経験は不要です。",
+    "inputLabel": "どのようなアプリを作りたいですか？",
+    "placeholder": "例：タスク管理アプリ、ブログ、ダッシュボード...",
     "charactersCount": "文字",
-    "stats": {
-      "appsCreated": "作成されたプロジェクト",
-      "buildTime": "平均構築時間",
-      "satisfaction": "ユーザー満足度"
-    }
-  },
-  "community": {
-    "title": "コミュニティから",
-    "viewAll": "すべて表示",
-    "preview": {
-      "useAsTemplate": "テンプレートとして使用",
-      "close": "閉じる"
-    }
+    "cta": "無料で始める",
+    "examples": {
+      "label": "例：",
+      "todo": "ToDoアプリ",
+      "dashboard": "ダッシュボード",
+      "blog": "ブログ",
+      "todoFull": "タスクの追加、編集、削除ができるシンプルなToDoアプリを作成してください。",
+      "dashboardFull": "売上、ユーザー、パフォーマンス指標を表示するダッシュボードを構築してください。",
+      "blogFull": "記事の作成、編集、公開ができるブログプラットフォームを作成してください。"
+    },
+    "typingExamples": [
+      "タスク管理アプリを作成してください",
+      "売上ダッシュボードを構築してください",
+      "ブログプラットフォームを作成してください",
+      "在庫管理システムを構築してください"
+    ]
   },
   "features": {
-    "title": "素晴らしいアプリとウェブサイトを構築するために必要なすべて",
-    "subtitle": "KlivはAIによって駆動される完全な開発環境を提供し、誰でもアプリ作成にアクセスできるようにします。",
+    "title": "強力な機能",
+    "subtitle": "プロフェッショナルなWebアプリケーションを構築するために必要なすべて",
     "aiPowered": {
-      "title": "AI駆動開発",
-      "description": "私たちの高度なAIがあなたの要件を理解し、クリーンで本番対応のコードを自動的に生成します。"
+      "title": "AI駆動の開発",
+      "description": "自然言語でアプリを説明し、AIに構築させましょう"
     },
-    "realtime": {
-      "title": "リアルタイムプレビュー",
-      "description": "AIとチャットしながら、アプリやウェブサイトが瞬時に生まれ変わるのを見ることができます。待機時間やコンパイルは不要です。"
+    "noCode": {
+      "title": "コーディング不要",
+      "description": "技術的な専門知識は必要ありません。アイデアがあれば十分です"
     },
     "responsive": {
-      "title": "モバイルファーストデザイン",
-      "description": "すべてのプロジェクトはレスポンシブデザインの原則で構築され、あらゆるデバイスで美しく表示されます。"
+      "title": "レスポンシブデザイン",
+      "description": "すべてのデバイスで美しく動作するアプリ"
     },
-    "page": {
-      "badge": "機能",
-      "title": "モダン開発のための強力な機能",
-      "subtitle": "AIアシスタンスでアプリケーションを構築、デプロイ、管理するために必要なすべて。",
-      "core": {
-        "title": "コア開発機能",
-        "aiChat": {
-          "title": "AIチャットインターフェース",
-          "description": "KlivのAIとチャットして、自然な言葉でアイデアを説明します。AIは文脈を理解し、あなたが思い描く通りのものを構築します。"
-        },
-        "livePreview": {
-          "title": "ライブプレビュー",
-          "description": "チャット中にプレビューウィンドウで変更を即座に確認できます。コンパイルの遅延なしに、アプリがリアルタイムで生まれ変わるのを見ることができます。"
-        },
-        "codeGeneration": {
-          "title": "スマートコード生成",
-          "description": "React、TypeScript、Tailwind CSSを使用してクリーンで保守可能なコードを生成します。すべてのコードは業界のベストプラクティスに従います。"
-        },
-        "responsive": {
-          "title": "レスポンシブデザイン",
-          "description": "すべてのアプリはモバイルファーストのレスポンシブデザイン原則で構築され、あらゆるデバイスと画面サイズで完璧な表示を保証します。"
-        }
-      },
-      "development": {
-        "title": "開発ツール",
-        "sourceCode": {
-          "title": "ソースコードアクセス",
-          "description": "内蔵のコードビューアーでプロジェクトのソースコードを表示・理解できます。チャットビューとコードビューをシームレスに切り替えられます。"
-        },
-        "debugging": {
-          "title": "AI駆動デバッグ",
-          "description": "Klivはコンソールログにアクセスして問題を自動的にデバッグし、技術的な知識なしに問題を解決するのを支援します。"
-        },
-        "iterative": {
-          "title": "反復開発",
-          "description": "段階的に変更を加えます。Klivは複雑な機能を管理しやすい部分に分割することを推奨し、より良い結果を得られます。"
-        },
-        "versionControl": {
-          "title": "バージョン履歴",
-          "description": "ワンクリックでプロジェクトの任意の以前のバージョンに戻すことができます。進捗を失ったり、誤ってアプリを壊したりすることはありません。"
-        }
-      },
-      "deployment": {
-        "title": "デプロイメントと共有",
-        "oneClick": {
-          "title": "ワンクリック公開",
-          "description": "Klivの内蔵ホスティングでアプリを瞬時にウェブにデプロイします。数秒で作品を世界と共有できます。"
-        },
-        "customDomain": {
-          "title": "カスタムドメイン",
-          "description": "独自のドメイン名をKlivアプリに接続します。SSL証明書を含むプロフェッショナルなホスティング。"
-        },
-        "github": {
-          "title": "GitHub統合",
-          "description": "プロジェクトをGitHubにエクスポートし、お好みのツールとワークフローで開発を継続できます。"
-        },
-        "remix": {
-          "title": "プロジェクトリミックス",
-          "description": "既存のプロジェクトをフォークしてリミックスし、新しいバリエーションを作成します。学習や既存のアイデアの発展に最適です。"
-        }
-      },
-      "technology": {
-        "title": "モダンテクノロジースタック",
-        "react": {
-          "title": "React & TypeScript",
-          "description": "最も人気のあるウェブ技術で構築されています。アプリはUIにReact、型安全性にTypeScriptを使用します。"
-        },
-        "tailwind": {
-          "title": "Tailwind CSS",
-          "description": "美しくレスポンシブなスタイリング。カスタムCSSを書くことなく、素晴らしいデザインを作成できます。"
-        },
-        "shadcn": {
-          "title": "Shadcn UIコンポーネント",
-          "description": "迅速な開発のための事前構築されたアクセシブルなUIコンポーネントの包括的なライブラリへのアクセス。"
-        },
-        "supabase": {
-          "title": "Supabase統合",
-          "description": "ネイティブSupabase統合でデータベース、認証、バックエンド機能を追加します。"
-        }
-      }
+    "deployment": {
+      "title": "即座のデプロイ",
+      "description": "ワンクリックでアプリを世界に公開"
     }
   },
   "pricing": {
-    "badge": "料金",
-    "title": "プランを選択",
-    "subtitle": "無料で構築を開始し、より多くの機能が必要になったらアップグレード",
-    "errorLoading": "料金情報の読み込みエラー",
-    "noPlansAvailable": "現在利用可能なプランはありません。",
-    "getStarted": "始める",
-    "subscribe": "購読",
-    "contactUs": "お問い合わせ",
-    "free": "無料",
-    "custom": "カスタム",
-    "customPricing": "カスタム料金",
-    "donation": "寄付",
-    "startsAt": "開始価格",
-    "perUnit": "単位あたり",
-    "every": "毎",
-    "month": "月",
-    "year": "年",
-    "week": "週",
-    "day": "日",
-    "months": "ヶ月",
-    "years": "年",
-    "weeks": "週間",
-    "days": "日間",
-    "testPlan": "これはテストプランです",
-    "test": "テスト",
-    "signupsDisabled": "このプランではサインアップが無効になっています",
-    "disabled": "無効"
-  },
-  "about": {
-    "badge": "私たちについて",
-    "title": "アプリ開発の民主化",
-    "subtitle": "技術的な背景に関係なく、誰もが自分のアイデアを実現できるべきだと私たちは信じています。",
-    "mission": {
-      "title": "私たちの使命",
-      "paragraph1": "Klivでは、アプリとウェブサイトの開発を誰もがアクセスできるものにすることを使命としています。素晴らしいアイデアが技術的な障壁や複雑なプログラミング言語を学ぶ必要性によって制限されるべきではないと私たちは信じています。",
-      "paragraph2": "私たちのAI駆動プラットフォームは、誰でも自分のビジョンを自然な言葉で説明し、それが完全に機能するWebアプリケーションに変換されるのを見ることができます。スタートアップのアイデアを持つ起業家、オンラインプレゼンスを確立したい中小企業の経営者、または単にクリエイティブなプロジェクトを実現したい人など、Klivはあなたの成功をサポートします。"
+    "title": "シンプルな料金体系",
+    "subtitle": "あらゆる規模のプロジェクトに対応",
+    "free": {
+      "title": "無料",
+      "price": "¥0",
+      "period": "/月",
+      "description": "個人プロジェクトに最適",
+      "features": [
+        "月3つのアプリ",
+        "基本的なテンプレート",
+        "コミュニティサポート"
+      ],
+      "cta": "始める"
     },
-    "values": {
-      "accessibility": {
-        "title": "アクセシビリティファースト",
-        "description": "私たちは、人々がデジタルソリューションを作成することを妨げる技術的な障壁を取り除くことにコミットしています。私たちのプラットフォームは、あらゆるスキルレベルのユーザーにとって直感的でアプローチしやすいように設計されています。"
-      },
-      "innovation": {
-        "title": "イノベーション",
-        "description": "私たちは最先端のAI技術を活用して、自然言語の説明を本番対応のコードに変換し、開発プロセスをこれまで以上に高速で直感的にします。"
-      },
-      "empowerment": {
-        "title": "エンパワーメント",
-        "description": "私たちは、高額な開発チームや長い学習曲線に依存することなく、個人や企業が自分たちのデジタルプレゼンスをコントロールできるようにすることを信じています。"
-      },
-      "community": {
-        "title": "コミュニティ",
-        "description": "私たちは、クリエイター、起業家、イノベーターが自分のアイデアを実現し、旅を始めたばかりの他の人々と成功体験を共有できるコミュニティを構築しています。"
-      }
+    "pro": {
+      "title": "プロ",
+      "price": "¥2,900",
+      "period": "/月",
+      "description": "成長するビジネスに",
+      "features": [
+        "無制限のアプリ",
+        "高度な機能",
+        "優先サポート",
+        "カスタムドメイン"
+      ],
+      "cta": "プロを選択"
     },
-    "story": {
-      "title": "私たちのストーリー",
-      "paragraph1": "Klivは、シンプルな観察から生まれました：技術的な障壁のために、あまりにも多くの素晴らしいアイデアが日の目を見ることがないということです。私たちは、従来のソフトウェア開発の複雑さとコストによって阻まれた、優秀な起業家、クリエイティブな専門家、そして素晴らしいコンセプトを持つビジネスオーナーを見てきました。",
-      "paragraph2": "経験豊富な開発者とAI研究者からなる私たちのチームは、共通のビジョンを持って集まりました：アプリ開発を会話のように簡単にできたらどうでしょうか？誰でも自分のアイデアを自然な日本語で説明し、それが瞬時に実現されるのを見ることができたらどうでしょうか？",
-      "paragraph3": "今日、Klivは世界中の何千人ものユーザーにサービスを提供しており、初めてのスタートアップを立ち上げるソロ起業家から、デジタルプレゼンスを拡大する既存企業まで様々です。私たちのプラットフォームで構築されるすべてのプロジェクトは、誰かの夢が現実になることを表しており、それが私たちを毎日前進させる原動力です。"
-    },
-    "technology": {
-      "title": "モダンテクノロジーで構築",
-      "paragraph1": "Klivのシンプルなインターフェースの背後には、信頼性、パフォーマンス、スケーラビリティのために設計された洗練されたテクノロジースタックがあります。Klivで構築されるすべてのアプリケーションは、React、TypeScript、Tailwind CSSなどの業界標準技術を使用し、プロジェクトが堅固な基盤の上に構築されることを保証します。",
-      "paragraph2": "私たちのAIは、あなたが何を構築したいかだけでなく、それを適切に構築する方法も理解します。ベストプラクティスに従ったクリーンで保守可能なコードを生成するため、あなたのアプリケーションは機能的であるだけでなく、プロフェッショナルグレードで成長に対応できます。",
-      "paragraph3": "データベース、認証、デプロイメントの組み込み統合により、Klivは複数のツールやサービスを管理する複雑さなしに、アイデアからライブアプリケーションまでに必要なすべてを提供します。"
+    "enterprise": {
+      "title": "エンタープライズ",
+      "price": "カスタム",
+      "period": "",
+      "description": "大規模組織向け",
+      "features": [
+        "専用サポート",
+        "カスタム統合",
+        "SLA保証",
+        "オンプレミス展開"
+      ],
+      "cta": "お問い合わせ"
     }
-  },
-  "careers": {
-    "badge": "キャリア",
-    "title": "私たちの使命に参加しませんか",
-    "subtitle": "アプリ開発の民主化と世界中のクリエイターのエンパワーメントを支援してください。",
-    "intro": {
-      "paragraph1": "Klivでは、ソフトウェア開発の未来を構築しています。私たちのAI駆動プラットフォームは、人々がアプリケーションを作成する方法を変革し、技術的な背景に関係なく誰でも開発にアクセスできるようにしています。",
-      "paragraph2": "私たちは主要な投資家に支援された急成長中のスタートアップで、世界中の何千人ものユーザーにサービスを提供しています。リモートファーストのチームに参加し、次世代の開発ツールの形成を支援してください。"
-    },
-    "culture": {
-      "title": "私たちの文化",
-      "remote": {
-        "title": "リモートファースト",
-        "description": "世界中どこからでも働けます。優秀な人材は地理的な制約に縛られないと私たちは信じています。"
-      },
-      "growth": {
-        "title": "成長マインドセット",
-        "description": "私たちはチームの成長に投資し、継続的な学習と実験を奨励しています。"
-      },
-      "impact": {
-        "title": "高いインパクト",
-        "description": "あなたの仕事は、夢を実現する何千人ものクリエイターや起業家に直接影響を与えます。"
-      },
-      "innovation": {
-        "title": "イノベーション",
-        "description": "私たちはAIと開発ツールの最前線にいて、可能性の境界を押し広げています。"
-      }
-    },
-    "openings": {
-      "title": "募集中のポジション",
-      "subtitle": "すべてのポジションは完全リモートです。すべての役職で英語の流暢さが必要です。",
-      "apply": "応募するには、以下にメールしてください",
-      "email": "careers@kliv.dev",
-      "include": "履歴書と、なぜその役職に興味があるのかを説明する簡潔なカバーレターを添付してください。"
-    }
-  },
-  "terms": {
-    "badge": "利用規約",
-    "title": "利用規約",
-    "subtitle": "サービスをご利用になる前に、これらの規約を注意深くお読みください。"
-  },
-  "privacy": {
-    "badge": "プライバシーポリシー",
-    "title": "あなたのプライバシーを大切にします",
-    "subtitle": "私たちはあなたのデータを保護し、その使用方法について透明性を保つことをお約束します。"
-  },
-  "security": {
-    "badge": "セキュリティ",
-    "title": "データセキュリティと保護",
-    "subtitle": "私たちの包括的なセキュリティ対策とデータ保護の実践について学んでください。"
   },
   "footer": {
-    "description": "AIとチャットしてアプリとウェブサイトを構築。コーディングは不要です。",
+    "description": "AIでWebアプリケーションを構築する最も簡単な方法",
     "product": "プロダクト",
+    "company": "会社",
+    "support": "サポート",
+    "legal": "法的事項",
     "features": "機能",
     "pricing": "料金",
-    "company": "会社",
     "about": "会社概要",
     "careers": "採用情報",
-    "support": "サポート",
+    "help": "ヘルプ",
     "contact": "お問い合わせ",
-    "serviceStatus": "サービス状況",
-    "legal": "法的事項",
     "privacy": "プライバシーポリシー",
     "terms": "利用規約",
     "security": "セキュリティ",
-    "copyright": "© 2024 Kliv. All rights reserved."
+    "allRightsReserved": "All rights reserved."
   },
-  "planContent": {
-    "products": {
-      "Basic Access": "ベーシックアクセス",
-      "Professional": "プロフェッショナル"
-    },
-    "plans": {
-      "Free": "無料",
-      "Professional": "プロフェッショナル",
-      "100 credits / month": "100クレジット/月",
-      "200 credits / month": "200クレジット/月",
-      "400 credits / month": "400クレジット/月",
-      "Custom": "カスタム"
-    },
-    "features": {
-      "Basic Access": "* パブリックプロジェクト\n* 1日5クレジット\n* コミュニティサポート",
-      "Professional": "無料プランの全て、さらに：\n* 無制限プロジェクト\n* 追加の日次クレジット\n* 優先サポート\n* カスタムドメイン\n* 無制限ユーザー",
-      "Custom": "* シングルサインオン（SAML）\n* カスタム統合\n* 専用サポート\n* SLA保証"
-    }
-  },
-  "tenantSignup": {
-    "getStarted": "サインアップ",
-    "defaultTagline": "プロンプトだけで美しいWebアプリを作成",
-    "step": "ステップ{{step}} / {{total}}",
-    "email": "メールアドレス",
-    "emailPlaceholder": "メールアドレスを入力",
-    "name": "氏名",
-    "namePlaceholder": "氏名を入力",
-    "password": "パスワード",
-    "passwordPlaceholder": "パスワードを作成",
-    "passwordConfirm": "パスワード（確認）",
-    "passwordConfirmPlaceholder": "もう一度パスワードを入力",
-    "passwordStrength": "より強力なパスワードを選択してください。",
-    "passwordsDontMatch": "パスワードが一致しません。",
-    "companyName": "会社名",
-    "companyNamePlaceholder": "会社名",
-    "adminDomain": "管理ドメイン",
-    "adminDomainPlaceholder": "mycompany",
-    "adminDomainHint": "これはカスタムドメインを設定するまで管理ポータルや製品にアクセスするためのドメインです。",
-    "domainValidationError": "ドメインには文字、数字、ダッシュのみを含めることができます。",
-    "signUpWithGoogle": "Googleでサインアップ",
-    "quickSignup": "クイックサインアップ",
-    "googleSignupDescription": "Googleアカウントですぐにサインアップ",
-    "googleSignupTerms": "続行することで利用規約とプライバシーポリシーに同意したことになります",
-    "or": "または",
-    "googleAuthError": "Googleで認証できませんでした",
-    "ssoError": "この組織はすでにアカウントが設定されています。<a href=\"/!saml/login/{{domain}}\">こちら</a>をクリックしてサインインするか、システム管理者にお問い合わせください。",
-    "userExistsError": "このメールアドレスのアカウントは既に存在します。ログイン画面のパスワード回復機能でパスワードをリセットできます。",
-    "next": "次へ"
-  },
-  "login": {
-    "welcomeBack": "おかえりなさい",
-    "enterCredentials": "アカウントにアクセスするための認証情報を入力してください",
-    "or": "または",
-    "logInButton": "ログイン",
-    "continueButton": "続行",
-    "continue": "続行",
-    "send": "送信",
-    "cancel": "キャンセル",
-    "returnToLogin": "ログインに戻る",
-    "logInWithoutSSO": "SSOなしでログイン",
-    "goToLoginButton": "ログインに進む",
-    "logInWithSSO": "SSOでログイン",
-    "forgotPassword": "パスワードをお忘れですか？",
-    "resetSuccess": "パスワードリセットの手順を記載したメールをお送りしました。",
-    "enterCode": "認証アプリから6桁のコードを入力してください",
-    "reauthenticateWithSAML": "SSOプロバイダーで再認証してください",
-    "pleaseReauthenticate": "続行するには再認証してください",
-    "welcomeBackWithName": "おかえりなさい、{{knownFirstName}}さん",
-    "loginSchema": {
-      "email": "メールアドレス",
-      "emailPlaceholder": "メールアドレスを入力",
-      "password": "パスワード",
-      "passwordPlaceholder": "パスワードを入力"
-    },
-    "recoverySchema": {
-      "email": "メールアドレス",
-      "emailPlaceholder": "メールアドレスを入力",
-      "hint": "パスワードリセット用のリンクをお送りします"
-    },
-    "totpSchema": {
-      "code": "認証コード",
-      "enterDigitCode": "6桁のコードを入力"
-    },
-    "ssoSchema": {
-      "email": "メールアドレス",
-      "emailPlaceholder": "仕事用メールアドレスを入力",
-      "hint": "組織のログインページにリダイレクトします"
-    },
-    "signInWithGoogle": "Googleでサインイン",
-    "continueWithGoogle": "Googleで続行",
-    "signInWithMicrosoft": "Microsoftでサインイン",
-    "continueWithMicrosoft": "Microsoftで続行",
-    "signInWithPasskey": "パスキーでサインイン",
-    "continueWithPasskey": "パスキーで続行"
+  "Get Started Free": "無料で始める",
+  "landing": {
+    "attribution": "このコンテンツは、ワークフロー自動化分野で顧客向けに構築した20以上の製品パターンを基に、Kliv AIによって生成されました。",
+    "usePrompt": "このプロンプトを使用",
+    "improvementDescription": "基本的な自動化ツールができたら、これらの追加機能で強化できます"
   }
 }
