Update community section title and subtitle in English locales

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -40,7 +40,8 @@
     }
   },
   "community": {
-    "title": "From the Community",
+    "title": "Explore What's Possible",
+    "subtitle": "See real applications built with Kliv by developers and creators worldwide",
     "viewAll": "View All",
     "preview": {
       "useAsTemplate": "Use as Template",
